[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pygambit"
dynamic = ["version"]
description = "The package for computation in game theory"
readme = "src/README.rst"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
    {name = "Theodore Turocy", email = "ted.turocy@gmail.com"},
    {name = "Rahul Savani", email = "rahul.savani@liverpool.ac.uk"}
]
keywords = ["game theory", "Nash equilibrium"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest", "nbformat", "nbclient", "ipykernel"]
doc = [
    "pydata-sphinx-theme",
    "sphinx_design",
    "sphinx-autobuild",
    "nbsphinx",
    "ipython",
    "matplotlib",
    "pickleshare",
    "jupyter",
    "open_spiel; sys_platform != 'win32'",
    "draw-tree @ git+https://github.com/gambitproject/draw_tree.git@v0.4.0"
]

[project.urls]
Homepage = "https://www.gambit-project.org"
Documentation = "https://gambitproject.readthedocs.io"
Repository = "https://github.com/gambitproject/gambit.git"
Issues = "https://github.com/gambitproject/gambit/issues"
Changelog = "https://github.com/gambitproject/gambit/blob/master/ChangeLog"


[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py310"
include = ["setup.py", "src/pygambit/**/*.py", "tests/**/*.py, doc/tutorials/*.ipynb"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "Q", # prefer double quotes
    "W291", # trailing-whitespace
]
ignore = []

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.cython-lint]
max-line-length = 99


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "nash_enumpure_strategy: tests of enumpure_solve in pure strategies",
    "nash_enumpure_agent: tests of enumpure_solve in pure behaviors",
    "nash_enummixed_strategy: tests of enummixed_solve in mixed strategies",
    "nash_enumpoly_behavior: tests of enumpoly_solve in mixed behaviors",
    "nash_lcp_strategy: tests of lcp_solve in mixed strategies",
    "nash_lcp_behavior: tests of lcp_solve in mixed behaviors",
    "nash_lp_strategy: tests of lp_solve in mixed strategies",
    "nash_lp_behavior: tests of lp_solve in mixed behaviors",
    "nash: all tests of Nash equilibrium solvers",
    "slow: all time-consuming tests",
]

[tool.setuptools]
packages = ["pygambit", "pygambit.catalog"]
package-dir = { "pygambit" = "src/pygambit", "pygambit.catalog" = "catalog" }

[tool.setuptools.package-data]
"pygambit.catalog" = ["*"]

[tool.setuptools.dynamic]
version = {file = "build_support/GAMBIT_VERSION"}
