#
# $Source$
# $Date$
# $Revision$
#
# DESCRIPTION:
# automake input for normal form samples directory
#

EXTRA_DIST = \
	2x2a.nfg \
	2x2const.nfg \
	2x2.nfg \
	2x2x2.nfg \
	2x2x2x2.nfg \
	2x2x2x2x2.nfg \
	3x3x3.nfg \
	5x4x3.nfg \
	8x2x2.nfg \
	8x8.nfg \
	cent2.nfg \
	coord2.nfg \
	coord333.nfg \
	coord3.nfg \
	coord4.nfg \
	csg1.nfg \
	csg2.nfg \
	csg3.nfg \
	csg4.nfg \
	deg1.nfg \
	deg2.nfg \
	e01.nfg \
	e02.nfg \
	e04.nfg \
	e07.nfg \
	g1.nfg \
	g2.nfg \
	g3.nfg \
	loopback.nfg \
	mixdom2.nfg \
	mixdom.nfg \
	oneill.nfg \
	pd.nfg \
	perfect1.nfg \
	perfect2.nfg \
	perfect3.nfg \
	poker.nfg \
	sh3.nfg \
	stengel.nfg \
	sww1.nfg \
	todd1.nfg \
	todd2.nfg \
	todd3.nfg \
	vd.nfg \
	wink3.nfg \
	winkels.nfg \
	yamamoto.nfg \
	zero.nfg
