## Process this file with automake to create Makefile.in

bin_PROGRAMS = gambit

#AM_CPPFLAGS = $(WX_CXXFLAGS)

gambit_SOURCES = \
	control-player.cc \
	control-player.h \
	dialog-about.cc \
	dialog-about.h \
	dialog-tree-label.cc \
	dialog-tree-label.h \
	dialog-tree-layout.cc \
	dialog-tree-layout.h \
	gambit.cc \
	gambit.h \
	game-document.cc \
	game-document.h \
	game-frame.cc \
	game-frame.h \
	pairarr.h \
	panel-mixed-detail.cc \
	panel-mixed-detail.h \
	panel-mixed-list.cc \
	panel-mixed-list.h \
	panel-nash.cc \
	panel-nash.h \
	panel-qre.cc \
	panel-qre.h \
	sheet.cc \
	sheet.h \
	sheetctl.cc \
	sheetctl.h \
	sheetsel.cc \
	sheetsel.h \
	sheetspt.cc \
	sheetspt.h \
	table-matrix.cc \
	table-matrix.h \
	table-schelling.cc \
	table-schelling.h \
	text-window.cc \
	text-window.h \
	thread-nash-mixed.cc \
	thread-nash-mixed.h \
	tree-display.cc \
	tree-display.h \
	tree-layout.cc \
	tree-layout.h \
	tree-print.cc \
	tree-print.h \
	wx24defs.h

gambit_LDADD = -lgambit

EXTRA_DIST = borland.mak gambit.rc gambit.xpm gambit32.cfg

