## Process this file with automake to create Makefile.in

EXTRA_DIST = \
	2x2a.agg \
	2x2a.nfg \
	algtest.gcl \
	auction.gcl \
	bhg3.agg \
	bhg3.efg \
	bhg3.prm \
	binomial.gcl \
	chainst.gcl \
	condjury.gcl \
	eaotest.gcl \
	efgtest.gcl \
	eqre.gcl \
	eqreml.gcl \
	holdout.gcl \
	loglike.gcl \
	normal.gcl \
	nqre.gcl \
	nqreml.gcl \
	qretest.gcl \
	regress.gcl \
	replicator.gcl \
	stats.gcl

