#
# $Source$
# $Date$
# $Revision$
#
# DESCRIPTION:
# automake input for base module
#

noinst_LIBRARIES = libbase.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libbase_a_SOURCES = \
	base.h \
	garray.cc \
	garray.h \
	garray.imp \
	gblock.cc \
	gblock.h \
	gblock.imp \
	glist.cc \
	glist.h \
	glist.imp \
	gmap.h \
	gmap.imp \
	gmisc.cc \
	gmisc.h \
	gnullstatus.h \
	gprogres.h \
	grarray.cc \
	grarray.h \
	grarray.imp \
	grblock.h \
	grblock.imp \
	gsignal.h \
	gstatus.h \
	gstream.cc \
	gstream.h \
	gtext.cc \
	gtext.h \
	gtree.h \
	gtree.imp \
	gwatch.cc \
	gwatch.h \
	odometer.cc \
	odometer.h 

EXTRA_DIST = borland.mak
