#
# $Source$
# $Date$
# $Revision$
#
# DESCRIPTION:
# automake input for base module
#

noinst_LTLIBRARIES = libgambit_base.la

AM_CPPFLAGS = -I$(top_srcdir)/sources

libgambit_base_la_SOURCES = \
	base.h \
	garray.cc \
	garray.h \
	garray.imp \
	gblock.cc \
	gblock.h \
	gblock.imp \
	glist.cc \
	glist.h \
	glist.imp \
	gmap.h \
	gmap.imp \
	gmisc.cc \
	gmisc.h \
	gnarray.imp \
	gnarray.h \
	gnullstatus.h \
	grarray.cc \
	grarray.h \
	grarray.imp \
	grblock.h \
	grblock.imp \
	gstatus.h \
	gtree.h \
	gtree.imp \
	odometer.cc \
	odometer.h 

EXTRA_DIST = borland.mak
