## Process this file with automake to create Makefile.in

EXTRA_DIST = \
	efg.ico \
	efg.xbm \
	gambit.bmp \
	gambit.ico \
	gambit.xbm \
	gambit.xpm \
	help.xpm \
	new.bmp \
	new.xpm \
	nfg.ico \
	nfg.xbm \
	open.bmp \
	open.xpm \
	outcome.cur \
	preview.bmp \
	preview.xpm \
	print.bmp \
	print.xpm \
	save.bmp \
	save.xpm \
	scissor.cur \
	zoomin.bmp \
	zoomin.xpm \
	zoomout.bmp \
	zoomout.xpm


