## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libgame.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libgame_a_SOURCES = \
        actiter.cc \
        actiter.h \
	behav.h \
	behav.imp \
	behavinst.cc \
	efbasis.cc \
	efbasis.h \
	efdom.cc \
	efdom.h \
	efg.cc \
	efg.h \
	efgciter.h \
	efgensup.cc \
	efgensup.h \
	efginst.cc \
	efgiter.cc \
	efgiter.h \
	efgnfg.cc \
	efgutils.cc \
	efgutils.h \
	efplayer.h \
	efstrat.cc \
	efstrat.h \
	gnarray.h \
	gnarray.imp \
	infoset.h \
	lexicon.h \
	mixed.h \
	mixed.imp \
	nfdom.cc \
	nfdom.h \
	nfdommix.cc \
	nfdommix.imp \
	nfg.cc \
	nfg.h \
	nfgciter.h \
	nfgensup.cc \
	nfgensup.h \
	nfginst.cc \
	nfgiter.cc \
	nfgiter.h \
	nfgutils.cc \
	nfplayer.h \
	nfstrat.cc \
	nfstrat.h \
	node.h \
	readefg.cc \
	readnfg.cc \
	sfg.cc \
	sfg.h \
	sfstrat.cc \
	sfstrat.h \
        striter.cc \
        striter.h

EXTRA_DIST = borland.mak 
