## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libgame.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libgame_a_SOURCES = \
        actiter.cc \
        actiter.h \
	behav.h \
	behav.imp \
	behav.cc \
	efdom.cc \
	efdom.h \
	efgciter.h \
	efgcont.cc \
	efgcont.h \
	efgensup.cc \
	efgensup.h \
	efgiter.cc \
	efgiter.h \
	efgsupport.cc \
	efgsupport.h \
	efgutils.cc \
	efgutils.h \
	game.cc \
	game.h \
	gamebase.h \
	gameinst.cc \
	gnarray.h \
	gnarray.imp \
	infoset.cc \
	infoset.h \
	mixed.cc \
	mixed.h \
	mixed.imp \
	nfdom.cc \
	nfdom.h \
	nfdommix.cc \
	nfdommix.imp \
	nfgciter.h \
	nfgcont.cc \
	nfgcont.h \
	nfgensup.cc \
	nfgensup.h \
	nfgiter.cc \
	nfgiter.h \
	nfgsupport.cc \
	nfgsupport.h \
	node.cc \
	node.h \
	outcome.cc \
	outcome.h \
	player.cc \
        player.h \
	readefg.cc \
	readnfg.cc \
	sfg.cc \
	sfg.h \
	sfstrat.cc \
	sfstrat.h \
`       striter.cc \
        striter.h

EXTRA_DIST = borland.mak 
