## Process this file with automake to create Makefile.in

noinst_LTLIBRARIES = libgambit_game.la

AM_CPPFLAGS = -I$(top_srcdir)/sources

gameincludedir = $(includedir)/gambit-$(VERSION)/gambit/game
gameinclude_HEADERS = \
	game.h \
	game-behav-mixed.h \
	game-behav-pure.h \
	game-contingency.h \
	game-file.h \
	game-infoset.h \
	game-node.h \
	game-outcome.h \
	game-player.h \
	game-sequence.h \
	game-strategy.h \
	game-strategy-mixed.h \
	sfg.h \
	sfstrat.h \
	table-contingency.h \
	table-game.h \
	table-outcome.h \
	table-player.h \
	table-strategy-mixed.h \
	table-strategy-mixed.imp \
	tree-behav-mixed.h \
	tree-behav-mixed.imp \
	tree-behav-pure.h \
	tree-contingency.h \
	tree-game.h \
	tree-infoset.h \
	tree-node.h \
	tree-outcome.h \
	tree-player.h \
	tree-strategy-mixed.h \
	tree-strategy-mixed.imp

libgambit_game_la_SOURCES = \
	game.h \
	game-behav-mixed.h \
	game-behav-pure.h \
	game-contingency.h \
	game-file.cc \
	game-file.h \
	game-infoset.h \
	game-node.h \
	game-outcome.h \
	game-player.h \
	game-sequence.h \
	game-strategy.h \
	game-strategy-mixed.h \
	sfg.cc \
	sfg.h \
	sfstrat.cc \
	sfstrat.h \
	table-contingency.cc \
	table-contingency.h \
	table-file.cc \
	table-game.cc \
	table-game.h \
	table-inst.cc \
	table-mixed-double.cc \
	table-mixed-mpfloat.cc \
	table-mixed-rational.cc \
	table-outcome.cc \
	table-outcome.h \
	table-player.cc \
	table-player.h \
	table-strategy-mixed.h \
	table-strategy-mixed.imp \
	tree-behav-double.cc \
	tree-behav-mixed.h \
	tree-behav-mixed.imp \
	tree-behav-mpfloat.cc \
	tree-behav-pure.cc \
	tree-behav-pure.h \
	tree-behav-rational.cc \
	tree-contingency.cc \
	tree-contingency.h \
	tree-file.cc \
	tree-game.cc \
	tree-game.h \
	tree-infoset.cc \
	tree-infoset.h \
	tree-inst.cc \
	tree-node.cc \
	tree-node.h \
	tree-outcome.cc \
	tree-outcome.h \
	tree-player.cc \
	tree-player.h \
	tree-strategy-mixed.h \
	tree-strategy-mixed.imp

EXTRA_DIST = borland.mak 
