## Process this file with automake to create Makefile.in

lib_LTLIBRARIES = libgambit.la

libgambit_la_SOURCES = \
	behav.cc behav.h behav.imp \
	behavitr.cc behavitr.h \
	behavspt.cc behavspt.h \
	game.cc game.h \
	garray.h \
	gdpvect.cc gdpvect.h gdpvect.imp \
	glist.h \
	gmap.h \
	matrix.cc matrix.h matrix.imp \
	gpvector.cc gpvector.h gpvector.imp \
	recarray.h \
	sqmatrix.cc sqmatrix.h sqmatrix.imp \
	gvector.cc gvector.h gvector.imp \
	integer.cc integer.h \
	libgambit.h \
	mixed.cc mixed.h mixed.imp \
	stratitr.cc stratitr.h \
	stratspt.cc stratspt.h \
	rational.cc rational.h \
	file.cc

libgambitincludedir = $(includedir)/libgambit
libgambitinclude_HEADERS = \
	behav.h behav.imp \
	behavitr.h \
	behavspt.h \
	game.h \
	garray.h \
	gdpvect.h gdpvect.imp \
	glist.h \
	gmap.h \
	matrix.h matrix.imp \
	gpvector.h gpvector.imp \
	recarray.h
	sqmatrix.h sqmatrix.imp \
	gvector.h gvector.imp \
	integer.h \
	libgambit.h \
	mixed.h mixed.imp \
	stratitr.h \
	stratspt.h \
	rational.h	

libgambit_la_LDFLAGS = -no-undefined -version-info 0:0:0