## Process this file with automake to create Makefile.in

lib_LTLIBRARIES = libgambit.la

libgambit_la_SOURCES = \
	behav.cc behav.h behav.imp \
	behavitr.cc behavitr.h \
	behavspt.cc behavspt.h \
	game.cc game.h \
	array.h \
	dvector.cc dvector.h dvector.imp \
	glist.h \
	gmap.h \
	matrix.cc matrix.h matrix.imp \
	number.h \
	pvector.cc pvector.h pvector.imp \
	recarray.h \
	sqmatrix.cc sqmatrix.h sqmatrix.imp \
	vector.cc vector.h vector.imp \
	integer.cc integer.h \
	libgambit.h \
	mixed.cc mixed.h mixed.imp \
	stratitr.cc stratitr.h \
	stratspt.cc stratspt.h \
	rational.cc rational.h \
	file.cc

libgambitincludedir = $(includedir)/libgambit
libgambitinclude_HEADERS = \
	behav.h behav.imp \
	behavitr.h \
	behavspt.h \
	game.h \
	array.h \
	dvector.h dvector.imp \
	glist.h \
	gmap.h \
	matrix.h matrix.imp \
	number.h \
	pvector.h pvector.imp \
	recarray.h
	sqmatrix.h sqmatrix.imp \
	vector.h vector.imp \
	integer.h \
	libgambit.h \
	mixed.h mixed.imp \
	stratitr.h \
	stratspt.h \
	rational.h	

libgambit_la_LDFLAGS = -no-undefined -version-info 0:0:0