## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libmath.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libmath_a_SOURCES = \
	complex.cc \
	double.cc \
	gdpvect.cc \
	gmatrix.cc \
	gnulib.cc \
	gnumber.cc \
	gpvector.cc \
	gsmatrix.cc \
	gvector.cc \
	integer.cc \
	mathinst.cc \
	misc.cc \
	rational.cc






