## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libmath.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libmath_a_SOURCES = \
	complex.cc \
	complex.h \
	double.cc \
	double.h \
	gdpvect.cc \
	gdpvect.h \
	gdpvect.imp \
	gmath.h \
	gmatrix.cc \
	gmatrix.h \
	gmatrix.imp \
	gnulib.cc \
	gnulib.h \
	gnumber.cc \
	gnumber.h \
	gpvector.cc \
	gpvector.h \
	gpvector.imp \
	gsmatrix.cc \
	gsmatrix.h \
	gsmatrix.imp \
	gvector.cc \
	gvector.h \
	gvector.imp \
	integer.cc \
	integer.h \
	mathinst.cc \
	misc.cc \
	rational.cc \
	rational.h 

EXTRA_DIST = borland.mak






