## Process this file with automake to create Makefile.in

noinst_LTLIBRARIES = libgambit_math.la

AM_CPPFLAGS = -I$(top_srcdir)/sources

mathincludedir = $(includedir)/gambit-$(VERSION)/gambit/math
mathinclude_HEADERS = \
	complex.h \
	gdpvect.h \
	gdpvect.imp \
	gmath.h \
	gmatrix.h \
	gmatrix.imp \
	gpvector.h \
	gpvector.imp \
	gsmatrix.h \
	gsmatrix.imp \
	gvector.h \
	gvector.imp \
	integer.h \
	mpfloat.h \
	rational.h

libgambit_math_la_SOURCES = \
	complex.cc \
	complex.h \
	gdpvect.cc \
	gdpvect.h \
	gdpvect.imp \
	gmath.h \
	gmatrix.cc \
	gmatrix.h \
	gmatrix.imp \
	gpvector.cc \
	gpvector.h \
	gpvector.imp \
	gsmatrix.cc \
	gsmatrix.h \
	gsmatrix.imp \
	gvector.cc \
	gvector.h \
	gvector.imp \
	integer.cc \
	integer.h \
	mathinst.cc \
	misc.cc \
	mpfloat.cc \
	mpfloat.h \
	rational.cc \
	rational.h 

EXTRA_DIST = borland.mak






