## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libnash.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libnash_a_SOURCES = \
	behavextend.cc \
	behavextend.h \
	clique.cc \
	clique.h \
	efgalgorithm.h \
	efglcp.cc \
	efglcp.h \
	efglcp.imp \
	efgliap.cc \
	efgliap.h \
	efglogit.cc \
	efglogit.h \
	efglp.cc \
	efglp.h \
	efglp.imp \
	efgpoly.cc \
	efgpoly.h \
	efgpoly.imp \
	efgpure.cc \
	efgpure.h \
	efgsubsolve.cc \
	efgsubsolve.h \
	lhtab.cc \
	lhtab.h \
	lhtab.imp \
	nfgalgorithm.h \
	nfgch.cc \
	nfgch.h \
	nfglcp.cc \
	nfglcp.h \
	nfglcp.imp \
	nfgliap.cc \
	nfgliap.h \
	nfglogit.cc \
	nfglogit.h \
	nfglp.cc \
	nfglp.h \
	nfglp.imp \
	nfgmixed.cc \
	nfgmixed.h \
	nfgmixed.imp \
	nfgpoly.cc \
	nfgpoly.h \
	nfgpure.cc \
	nfgpure.h \
	nfgqregrid.cc \
	nfgqregrid.h \
	nfgsimpdiv.cc \
	nfgsimpdiv.h \
	nfgsimpdiv.imp \
	nfgyamamoto.cc \
	nfgyamamoto.h 

EXTRA_DIST = borland.mak




