## Process this file with automake to create Makefile.in

noinst_LTLIBRARIES = libgambit_nash.la

AM_CPPFLAGS = -I$(top_srcdir)/sources

nashincludedir = $(includedir)/gambit-$(VERSION)/gambit/nash
nashinclude_HEADERS = \
	behavextend.h \
	clique.h \
	efglcp.h \
	efgliap.h \
	efglogit.h \
	efglp.h \
	efgpoly.h \
	efgpure.h \
	lhtab.h \
	nfgch.h \
	nfglcp.h \
	nfgliap.h \
	nfglogit.h \
	nfglp.h \
	nfgmixed.h \
	nfgpoly.h \
	nfgpure.h \
	nfgqregrid.h \
	nfgsimpdiv.h \
	nfgyamamoto.h 

libgambit_nash_la_SOURCES = \
	behavextend.cc \
	behavextend.h \
	clique.cc \
	clique.h \
	efglcp.cc \
	efglcp.h \
	efglcp.imp \
	efgliap.cc \
	efgliap.h \
	efglogit.cc \
	efglogit.h \
	efglp.cc \
	efglp.h \
	efglp.imp \
	efgpoly.cc \
	efgpoly.h \
	efgpoly.imp \
	efgpure.cc \
	efgpure.h \
	lhtab.cc \
	lhtab.h \
	lhtab.imp \
	nfgch.cc \
	nfgch.h \
	nfglcp.cc \
	nfglcp.h \
	nfglcp.imp \
	nfgliap.cc \
	nfgliap.h \
	nfglogit.cc \
	nfglogit.h \
	nfglp.cc \
	nfglp.h \
	nfglp.imp \
	nfgmixed.cc \
	nfgmixed.h \
	nfgmixed.imp \
	nfgpoly.cc \
	nfgpoly.h \
	nfgpure.cc \
	nfgpure.h \
	nfgqregrid.cc \
	nfgqregrid.h \
	nfgsimpdiv.cc \
	nfgsimpdiv.h \
	nfgsimpdiv.imp \
	nfgyamamoto.cc \
	nfgyamamoto.h 

EXTRA_DIST = borland.mak




