## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libnumerical.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libnumerical_a_SOURCES = \
	basis.cc \
	bfs.cc \
	btableau.cc \
	gfunc.cc \
	gfuncmin.cc \
	lemketab.cc \
	linrcomb.cc \
	lpsolve.cc \
	lptab.cc \
	ludecomp.cc \
	tableau.cc \
	vertenum.cc

