## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libnumerical.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libnumerical_a_SOURCES = \
	basis.cc \
	basis.h \
	bfs.cc \
	bfs.h \
	btableau.cc \
	btableau.h \
	btableau.imp \
	gfunc.cc \
	gfunc.h \
	gfuncmin.cc \
	gfuncmin.h \
	lemketab.cc \
	lemketab.h \
	lemketab.imp \
	linrcomb.cc \
	linrcomb.h \
	linrcomb.imp \
	lpsolve.cc \
	lpsolve.h \
	lpsolve.imp \
	lptab.cc \
	lptab.h \
	lptab.imp \
	ludecomp.cc \
	ludecomp.h \
	ludecomp.imp \
	tableau.cc \
	tableau.h \
	tableau.imp \
	vertenum.cc \
	vertenum.h \
	vertenum.imp

EXTRA_DIST = borland.mak