## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libpelican.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libpelican_a_SOURCES = \
	pelclhpk.cc \
	pelclqhl.cc \
	pelclyal.cc \
	pelconv.cc \
	peleval.cc \
	pelgennd.cc \
	pelgmatr.cc \
	pelhomot.cc \
	pelpred.cc \
	pelprgen.cc \
	pelproc.cc \
	pelpsys.cc \
	pelqhull.cc \
	pelsymbl.cc \
	pelutils.cc



