## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libpelican.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libpelican_a_SOURCES = \
	pelclhpk.cc \
	pelclhpk.h \
	pelclqhl.cc \
	pelclqhl.h \
	pelclyal.cc \
	pelclyal.h \
	pelconv.cc \
	pelconv.h \
	peleval.cc \
	peleval.h \
	pelgennd.cc \
	pelgennd.h \
	pelgmatr.cc \
	pelgmatr.h \
	pelgntyp.h \
	pelhomot.cc \
	pelhomot.h \
	pelpred.cc \
	pelpred.h \
	pelprgen.cc \
	pelprgen.h \
	pelproc.cc \
	pelproc.h \
	pelpscon.h \
	pelpsys.cc \
	pelpsys.h \
	pelqhull.cc \
	pelqhull.h \
	pelsymbl.cc \
	pelsymbl.h \
	pelutils.cc \
	pelutils.h

EXTRA_DIST = borland.mak



