## Process this file with automake to create Makefile.in

noinst_LIBRARIES = libpoly.a

AM_CPPFLAGS = -I$(top_srcdir)/sources

libpoly_a_SOURCES = \
	gpartltr.cc \
	gpartltr.h \
	gpartltr.imp \
	gpoly.cc \
	gpoly.h \
	gpoly.imp \
	gpolyctr.h \
	gpolylst.cc \
	gpolylst.h \
	gpolylst.imp \
	gsolver.cc \
	gsolver.h \
	gsolver.imp \
	ideal.cc \
	ideal.h \
	ideal.imp \
	ineqsolv.cc \
	ineqsolv.h \
	ineqsolv.imp \
	interval.cc \
	interval.h \
	interval.imp \
	monomial.cc \
	monomial.h \
	monomial.imp \
	pelclass.cc \
	pelclass.h \
	poly.cc \
	poly.h \
	poly.imp \
	prepoly.cc \
	prepoly.h \
	quiksolv.cc \
	quiksolv.h \
	quiksolv.imp \
	rectangl.cc \
	rectangl.h \
	rectangl.imp

EXTRA_DIST = borland.mak





